docs/v1.1.1/_sources/gallery/index.rst.txt
:orphan:

Examples: Tutorials
===================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use TradeTide&#x27;s Backtester class for automated strategy evaluation. The Backtester streamlines the entire workflow by handling position management, portfolio simulation, and performance analysis automatically.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_backtester_thumb.png
    :alt:

  :doc:`/gallery/backtester`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Automated Backtesting with Bollinger Bands Strategy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use the Bollinger Bands indicator with the TradeTide library.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_bollinger_bands_thumb.png
    :alt:

  :doc:`/gallery/bollinger_bands`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bollinger Bands</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="TradeTide draws candles with a small number of Matplotlib collections instead of creating one artist per bar.  This makes the visualisation practical for large intraday datasets.  By default, the renderer aggregates data to no more than 2,000 visible candles while preserving each bucket&#x27;s OHLC values.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_candlestick_chart_thumb.png
    :alt:

  :doc:`/gallery/candlestick_chart`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fast Candlestick Charts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This end-to-end tutorial follows the complete TradeTide workflow: load and validate data, calculate an indicator, turn its signals into orders, simulate a portfolio, inspect the trade ledger, and plot net equity and drawdown.  It uses bundled EUR/USD data and is intended as a reproducible research example, not investment advice.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_complete_strategy_tutorial_thumb.png
    :alt:

  :doc:`/gallery/complete_strategy_tutorial`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Build a Complete Strategy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Validate a market after loading it and before research or backtesting.  The report distinguishes invalid data (errors) from suspicious-but-usable data (warnings), such as unusually wide bid/ask spreads.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_data_quality_thumb.png
    :alt:

  :doc:`/gallery/data_quality`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Market Data Quality Checks</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a portable Plotly report containing interactive equity, drawdown, trade markers, performance metrics, and the complete ledger. Install the optional reporting extra first: pip install &#x27;TradeTide[reporting]&#x27;.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_interactive_html_report_thumb.png
    :alt:

  :doc:`/gallery/interactive_html_report`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Interactive HTML Backtest Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use the Moving Average Crossings indicator with the TradeTide library.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_moving_average_crossings_thumb.png
    :alt:

  :doc:`/gallery/moving_average_crossings`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Moving Average Crossings</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="OrderBook evaluates market, limit, stop, and stop-limit entry orders against bid/ask OHLC data.  It records the fill time, bar index, and execution price, and can produce an entry signal compatible with PositionCollection.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_order_types_thumb.png
    :alt:

  :doc:`/gallery/order_types`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Order Types and Deterministic Fills</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial runs a complete, reproducible FX backtest with TradeTide.  It uses the bundled EUR/USD data, so no data-provider account or download is required.  The strategy is deliberately small: Bollinger Bands identify potential mean-reversion entries, while fixed take-profit and stop-loss levels make the risk rules explicit.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_quickstart_backtest_thumb.png
    :alt:

  :doc:`/gallery/quickstart_backtest`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Your First FX Backtest</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use the Relative Momentum Index (RMI) indicator">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_relative_momentum_index_thumb.png
    :alt:

  :doc:`/gallery/relative_momentum_index`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Relative Momentum Index</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Every BacktestResult includes a trade ledger.  Each row records costs, holding time, exit classification, maximum adverse excursion (MAE), and maximum favorable excursion (MFE), while the ledger provides portfolio-level position analytics such as expectancy and streaks.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_trade_ledger_thumb.png
    :alt:

  :doc:`/gallery/trade_ledger`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Trade Ledger and Position Analytics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This comprehensive example demonstrates a complete end-to-end trading workflow using the TradeTide library. We&#x27;ll build a Bollinger Bands-based trading strategy, backtest it on historical CAD/USD data, and analyze the results.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_workflow_thumb.png
    :alt:

  :doc:`/gallery/workflow`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Complete Trading Strategy Workflow with Bollinger Bands</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/backtester
   /gallery/bollinger_bands
   /gallery/candlestick_chart
   /gallery/complete_strategy_tutorial
   /gallery/data_quality
   /gallery/interactive_html_report
   /gallery/moving_average_crossings
   /gallery/order_types
   /gallery/quickstart_backtest
   /gallery/relative_momentum_index
   /gallery/trade_ledger
   /gallery/workflow



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
